--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html dir="ltr" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style data-merge-styles="true"></style>
     <style data-merge-styles="true"></style><style data-merge-styles="true"></style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="ZPCgrY0vfuRWYoYGeH2ApkptImPEGodmYjQ3NWQ4HfY" />
   <title>CC Camera Price in Bangladesh 2024 | PORT0</title>
  <meta name="description" content="Buy CC Camera at the best price in Bangladesh. Latest Nigh vision CCTV Camera including Dahua, Hikvision, Jovision, ZKTeco available at PORT0 Online Shop. Order Online to get delivery in BD.">    <meta name="keywords" content="CC Camera, CCTV Camera Price in Bangladesh,Buy CCTV Camera,">       <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="./logo.png" rel="icon"> 
